--- a/index.html
+++ b/index.html
@@ -1,86 +1,330 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Hyrule Kingdom</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <!-- nav -->
-        <nav>
-            <img src="" alt="hyrule">
-            <ul>
-                <li>Home</li>
-                <li>Locations</li>
-                <li>About</li>
-            </ul>
-        </nav>
-         <!-- hero -->
-        <header>
-            <h1>Hyrule Kingdom</h1>
-        </header>
-        <!-- info -->
-        <section>
-            <div>
-                <h2>A World of Legend Awaits</h2>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hyrule Kingdom</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/vhv1wft.css">
+</head>
+
+<body id="home">
+    <!-- nav -->
+    <nav class="container-fluid">
+        <ul class="row align-items-center">
+            <li class="col-1 "><img src="images/logolight.png" alt="hyrule" class="w-100"></li>
+
+            <li class="offset-5 col-2 text-center ">Home</li>
+            <li class="col-2 text-center ">Locations</li>
+            <li class="col-2 text-center ">About</li>
+        </ul>
+
+    </nav>
+    <!-- hero -->
+    <header>
+        <div class=" hero">
+            <div class="relative">
+                <div class="gradient">
+
+                    <img src="images/homehero.png" alt="" class="w-100 filter">
+
+                </div>
+                <div class="absolute">
+                    <div class=" title text-center">
+                        <h1>Hyrule Kingdom</h1>
+                    </div>
+                    <div class="relative">
+                        <div class="subhead text-right">
+                            <p>Your Adventure Begins</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- info -->
+    <section class="container">
+        <div class="row align-items-center justify-content-center tan g-0 main">
+            <div class="col-6 text relative">
+                <div class="text-center">
+                    <h2>A World of Legend Awaits</h2>
+                </div>
+                <div class="subhead ">
+                    <p>Nature's beauty in every corner</p>
+                </div>
+
                 <p>Explore the beautiful landscapes and
                     charming towns of a kingdom rich with
                     history. Navigate the land and numerous
                     ruins of times past or simply relax and take
                     in the beauty of the land here in Hyrule.</p>
             </div>
-        </section>
-        <!-- history -->
-        <section>
-            <h2>About</h2>
-            <p>text</p>
-        </section>
-         <!-- map -->
-          <!-- locations -->
-        <section>
-            <div>
-                <h2>Explore the Kingdom</h2>
-            <p></p>
+            <div class="col-6">
+                <img src="images/homeheader.png" alt="" class="w-100">
             </div>
-            <div>
-                <img src="" alt="map">
+        </div>
+    </section>
+    <!-- history -->
+    <section class="container about">
+        <div class="row justify-content-center">
+            <div class="col-8 relative">
+                <div class="text-center">
+                    <h2>About The Kingdom of Hyrule</h2>
+                    <div class="subhead">
+                        <p>Kingdom of Legend</p>
+                    </div>
+                </div>
+                <p>The kingdom of Hyrule shows its rich history through its unique towns. From the cultural richness of
+                    Kakariko Village to the serene beauty of Hateno, the watery haven of Zora's Domain, the fiery energy
+                    of Goron City, the aerial wonders of Rito Village, the bustling activity of Gerudo Town, and the
+                    laid-back coastal charm of Lurelin Village, each town shows a unique tale, contributing to the
+                    vibrant tapestry of this land.</p>
             </div>
-            <div>
-                <ul>
-                    <li>Zora's Domain</li>
-                    <li>Goron City</li>
-                    <li>Rito Village</li>
-                    <li>Gerudo Town</li>
-                    <li>Kakoriko Village</li>
-                    <li>Hateno Town</li>
-                    <li>Hyrule Castle</li>
-                    <li>Lurelin Village</li>
+        </div>
+    </section>
+    <!-- map -->
+    <!-- locations -->
+    <section class="container">
+        <div class="row justify-content-center tan">
+            <div class="col-8 text-center explore relative">
+                <div class="row justify-content-center">
+                    <div class="col-6">
+                        <h2>Explore the Kingdom</h2>
+                        <div class="subhead">
+                            <p>This is a Subhead</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="map">
+                <img src="images/map.png" alt="map" class="w-100">
+            </div> -->
+            <div class="col-12">
+                <ul class="row justify-content-center locations p-0 g-3">
+                    <li class="col-3">
+                        <div class="row justify-content-center ">
+                            <div class=""><img src="images/zoracard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="">
+                                    <div class="text-center pt-2 ">
+                                        <h3>Zora's Domain</h3>
+                                    </div>
+                                    <div class="text-center">
+
+                                        <p>Dive into Zora's Domain, a captivating underwater realm!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class=""><img src="images/goroncard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Goron City</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>Experience the sizzling wonders of Goron City! Ready for the heat?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class=""><img src="images/ritocard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Rito Village</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>Soar to new heights in Rito Village, where sky high adventures await!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class=""><img src="images/gerudocard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Gerudo Town</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>Explore Gerudo Town, where vibrant culture meets sandy landscapes!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center ">
+                            <div class=""><img src="images/kakarikocard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Kakoriko Village</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>Explore Kakariko Village, where serene landscapes and rich
+                                            traditions invite you.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class="">
+                                <img src="images/hatenocard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Hateno Town</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>
+                                            Explore Hateno Village, where inviting landscapes and a warm community
+                                            welcome you!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class=""><img src="images/castlecard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-center">
+                                    <div class="text-center pt-2">
+                                        <h3>Hyrule Castle</h3>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>View Hyrule Castle, where the grand architecture inspires you.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-3">
+                        <div class="row justify-content-center">
+                            <div class=""><img src="images/lurelincard.png" alt="" class="w-100">
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class=" text-left">
+                                    <div class="text-center">
+                                        <h3>Lurelin Village</h3>
+                                    </div>
+                                    <div class="text-left">
+                                        <p>Discover the charm of Lurelin Village, where sandy shores welcome you to
+                                            unwind.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
-        </section>
-        <!-- images gallery -->
-        <section>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+        </div>
+    </section>
+    <!-- images gallery -->
+    <section class="container gallery">
+        <div class="row ">
+            <div class="col-12 relative">
+                <div class="text-center">
+                    <h2>See the Sights of Hyrule</h2>
+
+                    <div class="subhead">
+                        <p>Beauty in Every Corner</p>
+                    </div>
+                </div>
             </div>
-        </section>
-        <!-- footer -->
-        <footer>
-            <img src="" alt="">
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <div class="row g-0">
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery1.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery2.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery3.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery4.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery5.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                    <div class="relative col-6 col-lg-4">
+                        <img src="images/homegallery6.png" alt="" class="w-100">
+                        <div class="absolute likes">
+                            <p>106</p>
+                            <img src="images/heart.png" alt="" class="heart">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>Contact Us</p>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer class="container-fluid">
+        <div class="row  align-items-end">
+            <div class="col-1">
+                <img src="images/logodark.png" alt="" class="w-100">
+            </div>
+            <div class="offset-7 col-2 align-self-end">
                 <p>Email</p>
+            </div>
+            <div class="col-2 align-self-end">
                 <p>Phone</p>
             </div>
-        </footer>
-    </body>
+
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+</body>
+
 </html>
