--- a/hateno.html
+++ b/hateno.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://use.typekit.net/vhv1wft.css">
 </head>
 
-<body id="home">
+<body id="hateno">
     <!-- nav -->
     <nav class="container-fluid">
         <ul class="row align-items-center">
-            <li class="col-1 "><img src="images/logolight.png" alt="hyrule" class="w-100"></li>
+            <li class="col-1 "><a href="index.html"><img src="images/logolight.png" alt="hyrule" class="w-100"></a></li>
 
-            <li class="offset-5 col-2 text-center ">Home</li>
-            <li class="col-2 text-center ">Locations</li>
+           
+            <li class="offset-6 col-2 text-center "><a href="index.html">Locations</a></li>
             <li class="col-2 text-center ">About</li>
         </ul>
 
