--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <li class="col-md-1 col-2 "><img src="images/logolight.png" alt="hyrule" class="w-100"></li>
 
            
-            <li class="offset-6 col-2 text-center ">Locations</li>
-            <li class="col-2 text-center ">About</li>
+            <li class="offset-6 col-2 text-center"><a href="" class="pb-1">Locations</a></li>
+            <li class="col-2 text-center "> <a href="">About</a></li>
         </ul>
 
     </nav>
@@ -111,7 +111,7 @@
             <div class="col-12">
                 <ul class="row justify-content-center locations p-0 g-lg-3 g-md-2 g-3">
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center ">
+                        <a href="" class="row justify-content-center ">
                             <div class=""><img src="images/zoracard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -125,10 +125,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center">
+                        <a href="" class="row justify-content-center">
                             <div class=""><img src="images/goroncard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -142,10 +142,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center">
+                        <a href="" class="row justify-content-center">
                             <div class=""><img src="images/ritocard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -158,10 +158,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center">
+                        <a href="" class="row justify-content-center">
                             <div class=""><img src="images/gerudocard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -174,10 +174,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center ">
+                        <a href="" class="row justify-content-center ">
                             <div class=""><img src="images/kakarikocard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -191,7 +191,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
                         <a href="hateno.html" class="row justify-content-center">
@@ -214,7 +214,7 @@
                         </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center">
+                        <a href="" class="row justify-content-center">
                             <div class=""><img src="images/castlecard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -227,10 +227,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="col-6 col-md-3">
-                        <div class="row justify-content-center">
+                        <a href="" class="row justify-content-center">
                             <div class=""><img src="images/lurelincard.png" alt="" class="w-100">
                             </div>
                             <div class="row justify-content-center">
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                 </ul>
             </div>
